--- a/templates/apps/postgres/apps-init-db.j2
+++ b/templates/apps/postgres/apps-init-db.j2
@@ -23,7 +23,7 @@ spec:
               key: postgres-password
         {%if local_param["monitor_password"] == true%}
         - name: MONITOR_PASSWORD
-          value: 60f0c5bf8ed23120fc60
+          value: #TODO
         {% endif %}
       volumes:
       - name: apps-init-db-vol
