--- a/templates/notifications/pvc.j2
+++ b/templates/notifications/pvc.j2
@@ -4,11 +4,11 @@ kind: PersistentVolumeClaim
 metadata:
   labels:
     app: pgdata
-  name: files-pgdata
+  name: notifications-pgdata
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: rbd
+  storageClassName: {{universal_param["storage_class"]|default("rbd-new")}}
   resources:
     requests:
       storage: 10G
