--- a/templates/systems/postgres/pvc.j2
+++ b/templates/systems/postgres/pvc.j2
@@ -1,11 +1,12 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: tenants-postgres-vol01
+  name: systems-postgres-vol01
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: rbd-new
+  storageClassName: {{universal_param["storage_class"]|default("rbd-new")}}
   resources:
     requests:
       storage: 20Gi
+
