--- a/templates/tenants-api/postgres/pvc.j2
+++ b/templates/tenants-api/postgres/pvc.j2
@@ -1,12 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: systems-postgres-vol01
+  name: tenants-postgres-vol01
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: rbd
+  storageClassName: {{universal_param["storage_class"]|default("rbd-new")}}
   resources:
     requests:
       storage: 20Gi
-
