--- a/templates/streams/influx/pvc.j2
+++ b/templates/streams/influx/pvc.j2
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: rbd
+  storageClassName: {{universal_param["storage_class"]|default("rbd-new")}}
   resources:
     requests:
       storage: 200Gi
