--- a/templates/files/rabbitmq-pvc.j2
+++ b/templates/files/rabbitmq-pvc.j2
@@ -8,7 +8,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: rbd
+  storageClassName: {{universal_param["storage_class"]|default("rbd-new")}}
   resources:
     requests:
       storage: 10G
