--- a/templates/apps/apps-config.j2
+++ b/templates/apps/apps-config.j2
@@ -3,9 +3,8 @@ kind: ConfigMap
 metadata: 
   name: apps-config
 data:
-    {
-      "service_site_id": "{{universal_param["service_url"]}}",
-      "service_tenant_id": "{{universal_param["service_url"]}}",
-      "service_name": "{{service_param["service_name"]}}",
-      "tenants": {{local_param["tenants"]|default(["dev", "tacc", "admin"])}},
-    }
+  "service_site_url": "{{universal_param["service_url"]}}",
+  "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
+  "site_id": "{{universal_param["service_site_id"]}}",
+  "service_name": "{{service_param["service_name"]}}",
+  "tenants": {{local_param["tenants"]|default(["dev", "tacc", "admin"])}}
