--- a/templates/authenticator/authenticator-config.j2
+++ b/templates/authenticator/authenticator-config.j2
@@ -3,9 +3,11 @@ kind: ConfigMap
 metadata:
   name: authenticator-config
 data:
+  authenticator-config.json: |-
     {
-      "service_site_id": "{{universal_param["service_url"]}}",
-      "service_tenant_id": "{{universal_param["service_url"]}}",
+      "service_site_url": "{{universal_param["service_url"]}}",
+      "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
+      "site_id": "{{universal_param["service_site_id"]}}",
       "service_name": "{{service_param["service_name"]}}",
-      "tenants": {{local_param["tenants"]|default(["dev", "tacc", "admin"])}},
+      "tenants": {{local_param["tenants"]|default(["dev", "tacc", "admin"])}}
     }
