--- a/templates/streams/streams-config.j2
+++ b/templates/streams/streams-config.j2
@@ -3,7 +3,11 @@ kind: ConfigMap
 metadata:
   name: streams-config
 data:
+  streams-config.json: |-
     {
+      "service_site_url": "{{universal_param["service_url"]}}",
+      "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
+      "site_id": "{{universal_param["service_site_id"]}}",
       "service_name": "{{service_param["service_name"]}}",
       "tenant": {{local_param["tenant"]|default(service_param["tenant"]|default(universal_param["tenant"]))}}
       "tenants": ["*"],
