--- a/templates/tenants-api/tenants-config.j2
+++ b/templates/tenants-api/tenants-config.j2
@@ -5,15 +5,16 @@ metadata:
 data:
   tenants-config.json: |-
     {
+      "primary_site_admin_tenant_base_url": "{{local_param["service_url"]|default(service_param["service_url"]|default(universal_param["service_url"]))}}",
       "service_site_id": "{{local_param["service_site_id"]|default(service_param["service_site_id"]|default(universal_param["service_site_id"]))}}",
       "service_tenant_id": "{{local_param["service_tenant_id"]|default(service_param["service_tenant_id"]|default(universal_param["service_tenant_id"]))}}",
       "service_name": "{{service_param["service_name"]}}",
       "postgres_user": "{{local_param["postgres_user"]|default(service_param["postgres_user"]|default(universal_param["postgres_user"]))}}",
       "tenants": ["*"],
-      "use_sk": "{{local_param["use_sk"]|default(service_param["use_sk"]|default(universal_param["use_sk"]|default(true)))}}",
-      "log_level": "{{local_param["log_level"]|default("DEBUG")}}",
-      "show_traceback": {{local_param["show_traceback"]|default("false")}},
-      {% if local_param["test_jwt"] is defined %}
-      "test_jwt": "{{local_param["test_jwt"]}}"
+      "use_sk": {{local_param["use_sk"]|default(service_param["use_sk"]|default(universal_param["use_sk"]|default(true)))|tojson}},
+      "show_traceback": {{local_param["show_traceback"]|default(false)|tojson}},
+      {% if local_param["test_jwt"]%}
+      "test_jwt": "{{local_param["test_jwt"]}},"
       {% endif %}
+      "log_level": "{{local_param["log_level"]|default("DEBUG")}}"
     }
