--- a/templates/tokens-api/tokens-config.j2
+++ b/templates/tokens-api/tokens-config.j2
@@ -3,12 +3,14 @@ kind: ConfigMap
 metadata:
   name: tokens-config
 data:
+  tokens-config.json: |-
     {
-      "service_site_id": "{{universal_param["service_url"]}}",
-      "service_tenant_id": "{{universal_param["service_url"]}}",
+      "primary_site_admin_tenant_base_url": "{{local_param["service_url"]|default(service_param["service_url"]|default(universal_param["service_url"]))}}",
+      "service_site_id": "{{local_param["service_site_id"]|default(service_param["service_site_id"]|default(universal_param["service_site_id"]))}}",
+      "service_tenant_id": "{{local_param["service_tenant_id"]|default(service_param["service_tenant_id"]|default(universal_param["service_tenant_id"]))}}",
       "service_name": "{{service_param["service_name"]}}",
-      "use_sk": {{ local_param["use_sk"]|default("true") }},
+      "use_sk": {{ local_param["use_sk"]|default("true")|lower }},
       "log_level": "{{local_param["log_level"]|default("DEBUG")}}",
-      "tenants": {{local_param["tenants"]|default(["dev", "tacc", "admin"])}},
-      "show_traceback": {{local_param["show_traceback"]|default("false")}},
+      "tenants": {{local_param["tenants"]|default(["dev", "tacc", "admin"])|tojson}},
+      "show_traceback": {{local_param["show_traceback"]|default("false")|lower}}
     }
