Fixed more config files

--- a/templates/jobs/jobs-config.j2
+++ b/templates/jobs/jobs-config.j2
@@ -3,8 +3,7 @@ kind: ConfigMap
 metadata: 
   name: jobs-config
 data:
-  "service_site_url": "{{universal_param["service_url"]}}",
-  "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
-  "site_id": "{{universal_param["service_site_id"]}}",
-  "service_name": "{{service_param["service_name"]}}",
-  "tenants": {{local_param["tenants"]|default(["dev", "tacc", "admin"])}}
+  "service_site_url": "{{universal_param["service_url"]}}"
+  "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
+  "site_id": "{{universal_param["service_site_id"]}}"
+  "service_name": "{{service_param["service_name"]}}"
