--- a/templates/admin/admin-config.j2
+++ b/templates/admin/admin-config.j2
@@ -3,9 +3,9 @@ kind: ConfigMap
 metadata: 
   name: admin-config
 data:
-  "primary_site_admin_tenant_base_url": "{{local_param["service_url"]|default(service_param["service_url"]|default(universal_param["service_url"]))}}",
-  "service_site_id": "{{local_param["service_site_id"]|default(service_param["service_site_id"]|default(universal_param["service_site_id"]))}}",
-  "service_tenant_id": "{{local_param["service_tenant_id"]|default(service_param["service_tenant_id"]|default(universal_param["service_tenant_id"]))}}",
-  "service_name": "{{service_param["service_name"]}}",
+  "primary_site_admin_tenant_base_url": "{{local_param["service_url"]|default(service_param["service_url"]|default(universal_param["service_url"]))}}"
+  "service_site_id": "{{local_param["service_site_id"]|default(service_param["service_site_id"]|default(universal_param["service_site_id"]))}}"
+  "service_tenant_id": "{{local_param["service_tenant_id"]|default(service_param["service_tenant_id"]|default(universal_param["service_tenant_id"]))}}"
+  "service_name": "{{service_param["service_name"]}}"
   "tenants": {{local_param["tenants"]|default(["dev", "tacc", "admin"])}}
   
