--- a/templates/authenticator/api/api.j2
+++ b/templates/authenticator/api/api.j2
@@ -42,4 +42,4 @@ spec:
       volumes:
       - name: authenticator-config
         configMap:
-          name: global-config
+          name: authenticator-config
