--- a/templates/authenticator/postgres/migrations.j2
+++ b/templates/authenticator/postgres/migrations.j2
@@ -15,6 +15,8 @@ spec:
         #command: ["sleep","3600"]
         imagePullPolicy: Always
         env:
+        - name: MIGRATIONS_RUNNING
+          value: "True"
         - name: dev_ldap_bind_credential
           valueFrom:
             secretKeyRef:
@@ -37,4 +39,4 @@ spec:
       volumes:
       - name: authenticator-config
         configMap:
-          name: global-config
+          name: authenticator-config
