--- a/templates/authenticator/authenticator-config.j2
+++ b/templates/authenticator/authenticator-config.j2
@@ -3,11 +3,14 @@ kind: ConfigMap
 metadata:
   name: authenticator-config
 data:
+  LDAP_DOMAIN: tapis
+  LDAP_ORGANISATION: Tapis
   authenticator-config.json: |-
     {
-      "service_site_url": "{{universal_param["service_url"]}}",
+      "primary_site_admin_tenant_base_url":"{{universal_param["service_url"]}}",
+      "service_site_id": "{{universal_param["service_site_id"]}}",
       "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
-      "site_id": "{{universal_param["service_site_id"]}}",
       "service_name": "{{service_param["service_name"]}}",
-      "tenants": {{local_param["tenants"]|default(["dev", "tacc", "admin"])}}
+      "tenants": {{universal_param["tenants"]|default(["dev", "admin"])|tojson}},
+      "sql_db_url": "authenticator-postgres:5432/authenticator"
     }
