--- a/templates/tenants-api/tenants-config.j2
+++ b/templates/tenants-api/tenants-config.j2
@@ -5,9 +5,9 @@ metadata:
 data:
   tenants-config.json: |-
     {
-      "primary_site_admin_tenant_base_url": "{{local_param["service_url"]|default(service_param["service_url"]|default(universal_param["service_url"]))}}",
-      "service_site_id": "{{local_param["service_site_id"]|default(service_param["service_site_id"]|default(universal_param["service_site_id"]))}}",
-      "service_tenant_id": "{{local_param["service_tenant_id"]|default(service_param["service_tenant_id"]|default(universal_param["service_tenant_id"]))}}",
+      "primary_site_admin_tenant_base_url": "{{universal_param["service_url"]}}",
+      "service_site_id": "{{universal_param["service_site_id"]}}",
+      "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
       "service_name": "{{service_param["service_name"]}}",
       "postgres_user": "{{local_param["postgres_user"]|default(service_param["postgres_user"]|default(universal_param["postgres_user"]))}}",
       "tenants": ["*"],
