--- a/templates/tokens-api/api.j2
+++ b/templates/tokens-api/api.j2
@@ -31,5 +31,5 @@ spec:
       volumes:
       - name: tokens-config
         configMap:
-          name: global-config
+          name: tokens-config
 
