--- a/templates/tokens-api/tokens-config.j2
+++ b/templates/tokens-api/tokens-config.j2
@@ -5,12 +5,12 @@ metadata:
 data:
   tokens-config.json: |-
     {
-      "primary_site_admin_tenant_base_url": "{{local_param["service_url"]|default(service_param["service_url"]|default(universal_param["service_url"]))}}",
-      "service_site_id": "{{local_param["service_site_id"]|default(service_param["service_site_id"]|default(universal_param["service_site_id"]))}}",
-      "service_tenant_id": "{{local_param["service_tenant_id"]|default(service_param["service_tenant_id"]|default(universal_param["service_tenant_id"]))}}",
+      "primary_site_admin_tenant_base_url": "{{universal_param["service_url"]}}",
+      "service_site_id": "{{universal_param["service_site_id"]}}",
+      "service_tenant_id": "{{universal_param["service_tenant_id"]}}",
       "service_name": "{{service_param["service_name"]}}",
       "use_sk": {{ local_param["use_sk"]|default("true")|lower }},
       "log_level": "{{local_param["log_level"]|default("DEBUG")}}",
-      "tenants": {{local_param["tenants"]|default(["dev", "tacc", "admin"])|tojson}},
+      "tenants": {{local_param["tenants"]|default(["dev", "admin"])|tojson}},
       "show_traceback": {{local_param["show_traceback"]|default("false")|lower}}
     }
