--- a/templates/files/api.j2
+++ b/templates/files/api.j2
@@ -53,19 +53,19 @@ spec:
         - name: TAPIS_SITE_ID
           valueFrom:
             configMapKeyRef:
-              name: global-config
-              key: siteId
+              name: files-config
+              key: site_id
         {% endif%}
         - name: TOKENS_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: global-config
-              key: service_tenant_base_url
+              name: files-config
+              key: service_site_url
         - name: TENANTS_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: global-config
-              key: service_tenant_base_url
+              name: files-config
+              key: service_site_url
         - name: RABBITMQ_PASSWORD
           valueFrom:
             secretKeyRef:
