--- a/templates/jobs/readers/jobrdr-Recovery.j2
+++ b/templates/jobs/readers/jobrdr-Recovery.j2
@@ -13,6 +13,10 @@ spec:
     spec:
       initContainers:
       automountServiceAccountToken: false
+      {% if local_param["node_selector"] == true%}
+      nodeSelector:
+        exempt: "yes"
+      {% endif %}
       containers:
       - name: jobs-rdr-recovery
         image: tapis/jobsworker:{{local_param["image_version"]|default(service_param["image_version"]|default(universal_param["image_version"]|default("dev")))}}
@@ -32,13 +36,13 @@ spec:
         - name: tapis.site.id
           valueFrom:
             configMapKeyRef:
-              name: global-config
-              key: siteId
+              name: jobs-config
+              key: site_id
         - name: tapis.tenant.svc.baseurl
           valueFrom:
             configMapKeyRef:
-              name: global-config
-              key: service_tenant_base_url
+              name: jobs-config
+              key: service_site_url
         - name: tapis.service.password
           valueFrom:
             secretKeyRef:
