--- a/templates/meta/api/restheart.j2
+++ b/templates/meta/api/restheart.j2
@@ -32,5 +32,5 @@ spec:
       volumes:
         - name: restheart-server-config-properties
           configMap:
-            name: global-config
+            name: meta-config
 
