--- a/templates/monitoring/secrets.j2
+++ b/templates/monitoring/secrets.j2
@@ -7,5 +7,5 @@ metadata:
   name: grafana-admin
 type: Opaque
 data:
-  username: #TODO
-  password: #TODO
+  username: {{local_param["username"]}}
+  password: {{local_param["password"]}}
