--- a/templates/monitoring/apps/prometheus.j2
+++ b/templates/monitoring/apps/prometheus.j2
@@ -49,7 +49,7 @@ spec:
           claimName: prometheus-vol01
       - name: prometheus-config
         configMap:
-          name: global-config
+          name: monitoring-config
 
 #      - name: thanos
 #        image: quay.io/thanos/thanos:v0.8.0
