--- a/templates/monitoring/monitoring-config.j2
+++ b/templates/monitoring/monitoring-config.j2
@@ -7,3 +7,43 @@ data:
   "service_tenant_id": "{{universal_param["service_tenant_id"]}}"
   "site_id": "{{universal_param["service_site_id"]}}"
   "service_name": "{{service_param["service_name"]}}"
+  prometheus-config.yml: |-
+    # my global config
+    global:
+      scrape_interval:     60s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+      evaluation_interval: 60s # Evaluate rules every 15 seconds. The default is every 1 minute.
+      # scrape_timeout is set to the global default (10s).
+      external_labels:
+        monitor: "dev.develop.tapis.io"
+
+    # Alertmanager configuration
+    alerting:
+      alertmanagers:
+      - static_configs:
+        - targets:
+          # - alertmanager:9093
+
+    # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
+    rule_files:
+      # - "first_rules.yml"
+      # - "second_rules.yml"
+
+    # A scrape configuration containing exactly one endpoint to scrape:
+    # Here it's Prometheus itself.
+    scrape_configs:
+      # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
+      - job_name: 'prometheus'
+
+        static_configs:
+        - targets: ['localhost:9090']
+
+      - job_name: 'monitoring-exporter'
+        static_configs:
+        - targets: ['monitoring-exporter:8000']
+
+      - job_name: 'vault-metrics'
+        metrics_path: '/v1/sys/metrics'
+        params:
+          format: ['prometheus']
+        static_configs:
+        - targets: ['vault:8200']
